# upy-for-4dSystems-RP2350-Display

./: .gitignore  4DSYS_RP2350 - Verknüpfung.bat  README.md  SliderExample.ws5psdk  Verknüpfung - 4DSYS_RP2350_70.bat  config_buildserver.ps1  difflib.py  dir_tree.py  micropython - Verknüpfung.lnk  structure-upy_display_export.txt  structure-ws5_export.txt  test_shContent.txt  upyport.ps1
_test/: blink_2led.py  uart_test_rx.py  uart_test_tx.py
config/: CMakeLists.txt  build_upy.sh  config_build.sh  extmod.cmake  upyport.batch
custom_ports/rp2/boards/4DSYS_RP2350_70/: mpconfigboard.cmake  (+3 more)
rp2/boards/4DSYS_RP2350_70/: RPI_PICO2_W - Verknüpfung.lnk  WEACTSTUDIO_RP2350B_CORE - Verknüpfung.lnk  board.json  mpconfigboard.h  pins.csv
tools/: config_buildserver.ps1  difflib (2).py  difflib.py  dir_tree.py  ssh_server.json
usermodules/: __todo__CustomCModule.txt
usermodules/_aigen4reference_/: deepseek_modgraphics4d.h  deepseek_modgraphics4d_p01.c  deepseek_modgraphics4d_p02.c
usermodules/mpy_graphics4d/: Graphics4D_OriginCopy.cpp  _functions_overview.txt  micropython.cmake  modgraphics4d.cpp  upyport.ps1
usermodules/mpy_graphics4d/config/: CMakeLists.txt  build_upy.sh  config_build.sh  upyport.batch
usermodules/mpy_graphics4d/mpy/: consts.py
usermodules/mpy_graphics4d/src/: Graphics4D.cpp  Graphics4D.h  rgb90.pio
usermodules/mpy_graphics4d/src/psram_tools/: CMakeLists.txt
usermodules/mpy_graphics4d/ws5_export/: CMakeLists.txt
usermodules/mpy_graphics4d/ws5_export/Graphics4D/extras/: memmap_psram_8mb.ld
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/: Colors4D.h  Graphics4D.h  bus_2040.pio.h  bus_write_arduino.pio.h  lcd_defs.h  pico_4d_modules.h  psram_setup.h  rgb43.pio  rgb50.pio  rgb70.pio  rgb90.pio
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/fonts/: font1.h  font2.h  font3.h  font4.h
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: .gitignore  README.md
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/usb_mass_storage/: .gitignore
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/include/: my_debug.h
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SDIO/: rp2040_sdio.c
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SPI/: sd_card_spi.c
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/src/: file_stream.c  my_debug.c  rtc.c  sd_timeouts.c
usermodules/mpy_graphics4d/ws5_export/Graphics4D/src/psram_tools/: rp_pico_alloc.c  rp_pico_alloc.h
usermodules/mpy_helloworld/: helloworld.c  micropython.cmake  micropython.mk  minimal_print.c  upyport.ps1
usermodules/mpy_helloworld/config/: build_upy.sh
usermodules/mpy_schrumpfkopf/: micropython.cmake  micropython.mk  micropython.wrapper.c  micropython.wrapper.cpp  upyport.ps1
usermodules/mpy_schrumpfkopf/config/: build_upy.sh
usermodules/mpy_schrumpfkopf/mpy/: main.py
usermodules/mpy_schrumpfkopf/src/: core.cpp  core.h  core.hpp  led_driver.hpp
ws5_export/: GeneratedConsts.h  __todo__CustomCModule.txt  consts.h  main.cpp  test_dynatext.gcx
ws5_export/Graphics4D/: CMakeLists.txt
ws5_export/Graphics4D/extras/: memmap_psram_8mb.ld
ws5_export/Graphics4D/src/: rgb43.pio  rgb50.pio
ws5_export/Graphics4D/src/psram_tools/: rp_pico_alloc.c
ws5_export/a_example/: cgpt-gemini.diff  cgpt_graphics4d_wrapper.cpp  deepseek_python_usage_example.py  gemini_README.odt  gemini_graphics4d_wrapper.cpp  gemini_micropython.mk
ws5_export/mpy_graphics4d/: micropython.cmake  micropython.mk  modgraphics4d.cpp
ws5_export/mpy_graphics4d/lib/: Graphics4D.h
ws5_export/mpy_graphics4d/src/: 4d.gcx  GeneratedConsts.h  Graphics4D.cpp  Graphics4D.h
ws5_export/mpy_helloworld/: helloworld.c  micropython.cmake  micropython.mk  upyport.ps1
ws5_export/mpy_helloworld/mpy/: main.py
ws5_export/mpy_main/: _main.py  config.py  consts.py
ws5_export/mpy_schrumpfkopf/: micropython.cmake  micropython.wrapper.c
ws5_export/mpy_schrumpfkopf/mpy/: main.py
ws5_export/mpy_schrumpfkopf/src/: led_driver.cpp
ws5_export/process_module_wd/: micropython.cmake  micropython.mk
(+9 files in other folders)
